--- a/index.html
+++ b/index.html
@@ -135,10 +135,8 @@
                             <li>Strong in Javascript/Typescript.</li>
                             <li>Focusing on complex javascript-heavy client apps.</li>
                             <li>Decent experience with AngularJS and Angular 2(more often work on it).</li>
-                            <li>Experience in backend development on nodejs (Express).</li>
-                            <li>Know most of the 'good to know' computer science stuff.</li>
-                            <li>Tesing, must have.</li>
-                            <li>The desire for professional growth, not only in width but also in depth.</li>
+                            <li>Decent experience in backend development on nodejs (Express).</li>
+                            <li>Not bad in Computer Science.</li>
                         </ul>
                         <p><a href="https://www.goodreads.com/review/list/48449164?shelf=%23ALL%23" target="_blank">What do I read?</a></p>
                     </div>
