--- a/index.html
+++ b/index.html
@@ -183,15 +183,15 @@
                 </div>
                 <div class="row">
                     <div class="text-right col-xs-5 col-sm-4 skill-desc"><span>Frameworks / Libs</span></div>
-                    <div class="col-xs-5 col-sm-7 skill">AngularJS(1/2), KnockoutJS,  Express, socket.io, Bootstrap, jQuery ... </div>
+                    <div class="col-xs-5 col-sm-7 skill">AngularJS(1/2),  Express, socket.io, Bootstrap, KnockoutJS, jQuery ... </div>
                 </div>
                 <div class="row">
                     <div class="text-right col-xs-5 col-sm-4 skill-desc"><span>DBMS</span></div>
                     <div class="col-xs-5 col-sm-7 skill">MongoDB</div>
                 </div>
                 <div class="row">
-                    <div class="text-right col-xs-5 col-sm-4 skill-desc"><span>Tools</span></div>
-                    <div class="col-xs-5 col-sm-7 skill">git, webstorm, vi ... </div>
+                    <div class="text-right col-xs-5 col-sm-4 skill-desc"><span>Tools etc</span></div>
+                    <div class="col-xs-5 col-sm-7 skill">git, webstorm, UNIX, vi</div>
                 </div>
             </section>
 
