--- a/index.html
+++ b/index.html
@@ -133,10 +133,11 @@
                     <div class="bordered col-xs-9 about-me-desc">
                         <ul>
                             <li>Strong in Javascript/Typescript.</li>
+                            <li>Good OOA-OOD-OOP skills</li>
                             <li>Focusing on complex javascript-heavy client apps.</li>
                             <li>Decent experience with AngularJS and Angular 2(more often work on it).</li>
-                            <li>Decent experience in backend development on nodejs (Express).</li>
-                            <li>Not bad in Computer Science.</li>
+                            <li>Decent experience in backend development on nodejs platform.</li>
+							<li>Not bad CS skills.</li>
                         </ul>
                         <p><a href="https://www.goodreads.com/review/list/48449164?shelf=%23ALL%23" target="_blank">What do I read?</a></p>
                     </div>
@@ -187,7 +188,7 @@
                 </div>
                 <div class="row">
                     <div class="text-right col-xs-5 col-sm-4 skill-desc"><span>DBMS</span></div>
-                    <div class="col-xs-5 col-sm-7 skill">MongoDB</div>
+                    <div class="col-xs-5 col-sm-7 skill">MongoDB, Redis</div>
                 </div>
                 <div class="row">
                     <div class="text-right col-xs-5 col-sm-4 skill-desc"><span>Tools etc</span></div>
