--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm-3 photo-block">
-                    <img src="img/photo.png" alt="Kozlov Alexander" class="photo">
+                    <img src="img/photo.jpg" alt="Kozlov Alexander" class="photo">
                 </div>
                 <div class="col-sm-9">
                     <ul class="list-inline media-list">
