--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Alexander Kozlov | Resume</title>
+    <title>Alexander Kozlov | Javascript developer</title>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="icon" type="image/png" href="img/favicon.ico">
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
@@ -20,11 +20,11 @@
     <header>
         <div class="header container">
             <div class="row">
-                <div class="col-sm-8">
+                <div class="col-sm-7">
                     <span class='logo'><a  href="index.html">Alexander Kozlov</a></span>
                 </div>
-                <div class="col-sm-4">
-                    <span class='resume-title'>Resume</span>
+                <div class="col-sm-5">
+                    <span class='resume-title'>Javascript developer</span>
                 </div>
             </div>
         </div>
@@ -47,170 +47,71 @@
                     </ul>
                 </div>
             </div>
-
-
-            <div class="row">
-                <div class="pdf-button">
-                    <a href="https://github.com/thohoh/thohoh.github.io/raw/master/Kozlov%20Alexander_cv.pdf" target='_blank' class="dl-button">Download as PDF</a>
-                </div>
-            </div>
         </div>
     </section>
-
-
 
 
 
     <section class="resume">
         <div class="container">
 
-
-            <!-- PERSONAL DATA -->
+            <!-- ABOUT ME -->
             <section class="resume-block personal-data">
-                <h2>Personal data</h2>
+                <h2 class='block-header'>A few words about me</h2>
+
                 <hr>
-                <div class="row">
-                    <div class="text-right col-xs-4"><span>Address:</span></div>
-                    <div class="col-xs-8">Russia. Crimea. Simferopol</div>
-                </div>
-                <div class="row">
-                    <div class="text-right col-xs-4"><span><span>Email:</span></span>
-                    </div>
-                    <div class="col-xs-8"><a href="mailto:itrefak@gmail.com">itrefak@gmail.com</a></div>
-                </div>
-                <div class="row">
-                    <div class="text-right col-xs-4"><span>Github:</span></div>
-                    <div class="col-xs-8"><a target='_blank' href="https://github.com/thohoh">thohoh</a></div>
-                </div>
-                <div class="row">
-                    <div class="text-right col-xs-4"><span>Twitter:</span></div>
-                    <div class="col-xs-8"><a href="https://twitter.com/trefa" target='_blank'>@trefa</a></div>
-                </div>
-                <div class="row">
-                    <div class="text-right col-xs-4"><span>Skype:</span></div>
-                    <div class="col-xs-8"><a href="skype:itrefa?call">itrefa</a></div>
-                </div>
-            </section>
 
-
-
-
-
-            <!-- EDUCATION -->
-            <section class="resume-block education">
-                <h2>Education</h2>
-                <hr>
-                <div class="row">
-                    <div class="text-right col-xs-3"><span class='education-period'>Sept 2013 - June 2014</span></div>
-                    <div class="bordered col-xs-9">
-                        <span>
-                            Specialist in Automated Management of Technological Processes.
-                        </span>
-                        <br>
-                        <p>Kherson National Technical University.</p>
-                    </div>
-                </div>
-
-                <div class="row">
-                    <div class="text-right col-xs-3"><span class='education-period'>Sept 2010 - June 2013</span></div>
-                    <div class="bordered col-xs-9">
-                        <span>Bachelor in Automated Management of Technological Processes.</span>
-                        <br>
-                        <p>Kherson National Technical University.</p>
-                    </div>
-                </div>
-            </section>
-
-
-
-
-            <!-- SUMMARY -->
-            <section class="resume-block about-me">
-                <h2>About me</h2>
-                <hr>
-                <div class="row">
-                    <div class="text-right col-xs-3 about-me-header"><span>Summary</span></div>
-                    <div class="bordered col-xs-9 about-me-desc">
-                        <ul>
-                            <li>Strong in Javascript/Typescript.</li>
-                            <li>Good OOA-OOD-OOP skills</li>
-                            <li>Focusing on complex javascript-heavy client apps.</li>
-                            <li>Decent experience with AngularJS and Angular 2(more often work on it).</li>
-                            <li>Decent experience in backend development on nodejs platform.</li>
-							<li>Not bad CS skills.</li>
-                        </ul>
-                        <p><a href="https://www.goodreads.com/review/list/48449164?shelf=%23ALL%23" target="_blank">What do I read?</a></p>
-                    </div>
-                </div>
-            </section>
-
-
-
-            <!-- EXPERIENCE -->
-            <section class="resume-block about-me">
-                <h2>Experience</h2>
-                <hr>
-                <div class="row">
-                    <div class="text-right col-xs-3 about-me-header"><span>may 2014 - jan 2016</span></div>
-                    <div class="bordered col-xs-9 about-me-desc">
-                        <h5>Freelance</h5>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="text-right col-xs-3 about-me-header"><span>jan 2016 - apr 2016</span></div>
-                    <div class="bordered col-xs-9 about-me-desc">
-                        <h5>happy-giraffe.ru</h5>
-                        <p>Front-end developer</p>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="text-right col-xs-3 about-me-header"><span>apr 2016 - present</span></div>
-                    <div class="bordered col-xs-9 about-me-desc">
-                        <h5>isone.tech</h5>
-                        <p>Javascript developer (stack: Angular2, Typescript, Express, MongoDB, Redis)</p>
-                    </div>
-                </div>
+                <p class='about-me-text'>My name is Alex, I'm a 25 years-old javascript developer with 3 years' experience creating web applications using HTML, CSS and JavaScript.</p>
             </section>
 
 
 
             <!-- SKILLS -->
-            <section class="resume-block computer-skills">
-                <h2>Computer skills</h2>
+            <section class="resume-block KB computer-skills">
+                <h2 class='block-header'>Skills</h2>
                 <hr>
-                <div class="row">
-                    <div class="text-right col-xs-5 col-sm-4 skill-desc"><span>Proficient in</span></div>
-                    <div class="col-xs-5 col-sm-7 skill">Javascript, Typescript, HTML , CSS</div>
-                </div>
-                <div class="row">
-                    <div class="text-right col-xs-5 col-sm-4 skill-desc"><span>Frameworks / Libs</span></div>
-                    <div class="col-xs-5 col-sm-7 skill">AngularJS(1/2),  Express, socket.io, Bootstrap, KnockoutJS, jQuery ... </div>
-                </div>
-                <div class="row">
-                    <div class="text-right col-xs-5 col-sm-4 skill-desc"><span>DBMS</span></div>
-                    <div class="col-xs-5 col-sm-7 skill">MongoDB, Redis</div>
-                </div>
-                <div class="row">
-                    <div class="text-right col-xs-5 col-sm-4 skill-desc"><span>Tools etc</span></div>
-                    <div class="col-xs-5 col-sm-7 skill">git, webstorm, UNIX, vi</div>
+
+                <div class='skills-content-wrapper'>
+                    <ul>
+                        <li>Developing single-page applications via Javascript frameworks powered by NodeJs.</li>
+                        <li>Creating responsive cross-browser markup with HTML5 and CSS3.</li>
+                        <li>Creating web applications powered by Nodejs.</li>
+                    </ul>
+
+                    <h4>Technologies: </h4>
+                    <p>Javascript, Typescript, NodeJS, HTML, CSS</p>
+
                 </div>
             </section>
 
-
-
-            <section class="resume-block languages">
-                <h2>Languages</h2>
+            <!-- CONTACTS -->
+            <section class="resume-block personal-data">
+                <h2 class='block-header'>Contacts</h2>
                 <hr>
+
+
                 <div class="row">
-                    <div class="text-right col-xs-6 col-sm-3"><span>English</span></div>
-                    <div class="col-xs-6 col-sm-9"><span>C1</span></div>
+                    <div class="text-right col-xs-6"><span><span>Current location:</span></span>
+                    </div>
+                    <div class="col-xs-6">Russia/Ukraine, Crimea, Simferopol</div>
                 </div>
+
                 <div class="row">
-                    <div class="text-right col-xs-6 col-sm-3"><span>Russian</span></div>
-                    <div class="col-xs-6 col-sm-9">Native</div>
+                    <div class="text-right col-xs-6"><span><span>Email:</span></span>
+                    </div>
+                    <div class="col-xs-6"><a href="mailto:itrefak@gmail.com">itrefak@gmail.com</a></div>
                 </div>
-            </section> <!-- end resume-block -->
-        </div> <!-- end container -->
+
+                <div class="row">
+                    <div class="text-right col-xs-6"><span>Twitter:</span></div>
+                    <div class="col-xs-6"><a href="https://twitter.com/trefa" target='_blank'>@trefa</a></div>
+                </div>
+
+                <div class="row">
+                    <div class="text-right col-xs-6"><span>LinkedIn:</span></div>
+                    <div class="col-xs-6"><a href="http://www.linkedin.com/in/kozlovtrefak" target='_blank'>linkedin.com/in/kozlovtrefak</a></div>
+                </div>
+            </section>
     </section> <!-- end resume -->
 
 
