1 Update info | Updated technical skills section

--- a/index.html
+++ b/index.html
@@ -73,9 +73,8 @@
 
                 <div class='skills-content-wrapper'>
                     <ul>
-                        <li>Developing single-page applications via Javascript frameworks powered by NodeJs.</li>
-                        <li>Creating responsive cross-browser markup with HTML5 and CSS3.</li>
-                        <li>Creating web applications powered by Nodejs.</li>
+                        <li>Developing sophisticated javascript applications.</li>
+                        <li>Writing well organized and maintanable code.</li>
                     </ul>
 
                     <h4>Technologies: </h4>
