4 backend info | added

--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
                 <div class='skills-content-wrapper'>
                     <ul>
                         <li>Developing sophisticated javascript applications.</li>
+			<li>Decent experience in building backend systems with nodejs.</li>
                         <li>Writing well organized and maintanable code.</li>
                     </ul>
 
