Updated twitter link

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 
                 <div class="row">
                     <div class="text-right col-xs-6"><span>Twitter:</span></div>
-                    <div class="col-xs-6"><a href="https://twitter.com/trefa" target='_blank'>@trefa</a></div>
+                    <div class="col-xs-6"><a href="https://twitter.com/alx_kozlov" target='_blank'>@trefa</a></div>
                 </div>
 
                 <div class="row">
