Updated skills section

--- a/index.html
+++ b/index.html
@@ -73,12 +73,12 @@
 
                 <div class='skills-content-wrapper'>
                     <ul>
-                        <li>Developing sophisticated javascript applications.</li>
-			<li>Decent experience in building backend systems with nodejs.</li>
-                        <li>Writing well organized and maintanable code.</li>
+                        <li>Developing sophisticated and scalable front-end and backend systems using Javascipt, Typescript and Node.js.</li>
+                        <li>Object oriented design and analysis.</li>
+                        <li>Communicating efficiently with team members to get things done quick and to avoid misunderstandings.</li>
                     </ul>
 
-                    <h4>Technologies: </h4>
+                    <h4>Techs: </h4>
                     <p>Javascript, Typescript, NodeJS, HTML, CSS</p>
 
                 </div>
