Updated twitter link on top of the page

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <div class="col-sm-9">
                     <ul class="list-inline media-list">
                         <li><a class='github-ico' href="https://github.com/thohoh" target='_blank'><i class="fa fa-github"></i></a></li>
-                        <li><a class='twitter-ico' href="https://twitter.com/trefa" target='_blank'><i class="fa fa-twitter"></i></a></li>
+                        <li><a class='twitter-ico' href="https://twitter.com/alx_kozlov" target='_blank'><i class="fa fa-twitter"></i></a></li>
                         <li><a class='email-ico' href="http://www.linkedin.com/in/kozlovtrefak" target='_blank'><i class="fa fa-linkedin"></i></a></li>
                     </ul>
                 </div>
