updated skills section

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                     <ul>
                         <li>Developing sophisticated and scalable front-end and backend systems using Javascipt, Typescript and Node.js.</li>
                         <li>Object oriented design and analysis.</li>
-                        <li>Communicating efficiently with team members to get things done quick and to avoid misunderstandings.</li>
+                        <li>Communicating efficiently with team members to get things done and to avoid misunderstandings.</li>
                     </ul>
 
                     <h4>Techs: </h4>
