update Feb 18th 2018

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Alexander Kozlov | Javascript developer</title>
+    <title>Alexander Kozlov | Fullstack Javascript Engineer</title>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="icon" type="image/png" href="img/favicon.ico">
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
@@ -20,11 +20,11 @@
     <header>
         <div class="header container">
             <div class="row">
-                <div class="col-sm-7">
+                <div class="col-lg-7 col-md-12 col-sm-12 col-xs-12">
                     <span class='logo'><a  href="index.html">Alexander Kozlov</a></span>
                 </div>
-                <div class="col-sm-5">
-                    <span class='resume-title'>Javascript developer</span>
+                <div class="col-lg-5 col-md-12 col-sm-12 col-xs-12">
+                    <span class='resume-title'>Fullstack Javascript Engineer</span>
                 </div>
             </div>
         </div>
@@ -57,32 +57,85 @@
 
             <!-- ABOUT ME -->
             <section class="resume-block personal-data">
-                <h2 class='block-header'>A few words about me</h2>
+                <h2 class='block-header'>About me</h2>
 
                 <hr>
 
-                <p class='about-me-text'>My name is Alex, I'm a 25 years-old javascript developer with 3 years' experience creating web applications using HTML, CSS and JavaScript.</p>
+                <p class='about-me-text'>Javascript expert getting things done.</p>
             </section>
 
-
-
-            <!-- SKILLS -->
-            <section class="resume-block KB computer-skills">
-                <h2 class='block-header'>Skills</h2>
+            <!-- EXPERIENCE -->
+            <section class="resume-block about-me">
+                <h2>Work experience</h2>
                 <hr>
+                <div class="row">
+                    <div class="text-right col-xs-3 about-me-header"><span>apr 2016 - present</span></div>
+                    <div class="bordered col-xs-9 about-me-desc">
+                        <h5>isone.tech</h5>
+                        <p>Fullstack Javascript Engineer</p>
 
-                <div class='skills-content-wrapper'>
-                    <ul>
-                        <li>Developing sophisticated and scalable front-end and backend systems using Javascipt, Typescript and Node.js.</li>
-                        <li>Object oriented design and analysis.</li>
-                        <li>Communicating efficiently with team members to get things done and to avoid misunderstandings.</li>
-                    </ul>
+                        <br>
 
-                    <h4>Techs: </h4>
-                    <p>Javascript, Typescript, NodeJS, HTML, CSS</p>
+                        <p>
+                            Web platform for development data-internsive javascript applications.
+                        </p>
+                        <p>
+                            Eliminates the need for a development team, significantly speeds up development.
+                        </p>
+                        <p>
+                            Makes the whole development cycle cheap.
+                        </p>
 
+                        <br>
+
+                        <p>
+                            Fullstack javascript development. From from very PoC to MVP.
+                        </p>
+
+                        <br>
+
+                        <p>Backends stack:</p>
+                        <p> Typescript/Node/Express/MongoDB/PostgreSQL/Golang/RabbitMQ/ElasticSearch.</p>
+
+                        <p>Client stack:</p>
+                        <p>Typescript/Angular2+</p>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="text-right col-xs-3 about-me-header"><span>jul 2016 - jan 2017</span></div>
+                    <div class="bordered col-xs-9 about-me-desc">
+                        <h5>cs.money</h5>
+                        <p>Fullstack Javascript Developer</p>
+
+                        <br>
+
+                        <p>
+                            Automated trading system for steam inventory.
+                        </p>
+
+                        <p>Tech stack:</p>
+                        <p> Node/Express/MySQL</p>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="text-right col-xs-3 about-me-header"><span>jan 2016 - apr 2016</span></div>
+                    <div class="bordered col-xs-9 about-me-desc">
+                        <h5>happy-giraffe.ru</h5>
+                        <p>Front-end developer</p>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="text-right col-xs-3 about-me-header"><span>may 2014 - jan 2016</span></div>
+                    <div class="bordered col-xs-9 about-me-desc">
+                        <h5>Freelance projects</h5>
+                        <p>Front-end developer</p>
+                    </div>
                 </div>
             </section>
+
 
             <!-- CONTACTS -->
             <section class="resume-block personal-data">
@@ -91,25 +144,33 @@
 
 
                 <div class="row">
-                    <div class="text-right col-xs-6"><span><span>Current location:</span></span>
-                    </div>
-                    <div class="col-xs-6">Russia/Ukraine, Crimea, Simferopol</div>
-                </div>
-
-                <div class="row">
                     <div class="text-right col-xs-6"><span><span>Email:</span></span>
                     </div>
                     <div class="col-xs-6"><a href="mailto:itrefak@gmail.com">itrefak@gmail.com</a></div>
                 </div>
 
                 <div class="row">
-                    <div class="text-right col-xs-6"><span>Twitter:</span></div>
-                    <div class="col-xs-6"><a href="https://twitter.com/alx_kozlov" target='_blank'>@trefa</a></div>
+                    <div class="text-right col-xs-6"><span>SkypeId:</span></div>
+                    <div class="col-xs-6"><p>itrefa</p></div>
                 </div>
 
                 <div class="row">
-                    <div class="text-right col-xs-6"><span>LinkedIn:</span></div>
-                    <div class="col-xs-6"><a href="http://www.linkedin.com/in/kozlovtrefak" target='_blank'>linkedin.com/in/kozlovtrefak</a></div>
+                    <div class="text-right col-xs-6"><span>Github:</span></div>
+                    <div class="col-xs-6"><a href="https://github.com/thohoh" target='_blank'>https://github.com/thohoh</a></div>
+                </div>
+
+                <div class="row">
+                    <div class="text-right col-xs-6"><span>LinkedIn</span></div>
+                    <div class="col-xs-6"><a href="http://www.linkedin.com/in/kozlovtrefak" target='_blank'>https://linkedin.com/in/kozlovtrefak</a></div>
+                </div>
+
+                <div class="row">
+                    <div class="text-right col-xs-6"><span>Twitter:</span></div>
+                    <div class="col-xs-6"><a href="https://twitter.com/alx_kozlov" target='_blank'>@alx_kozlov</a></div>
+                </div>
+                <div class="row">
+                    <div class="text-right col-xs-6"><span>CV web page:</span></div>
+                    <div class="col-xs-6"><a href="https://thohoh.github.io" target='_blank'>thohoh.github.io</a></div>
                 </div>
             </section>
     </section> <!-- end resume -->
