update Feb 18th 2018

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                         <br>
 
                         <p>
-                            Fullstack javascript development. From from very PoC to MVP.
+                            Fullstack javascript development. From very PoC to MVP.
                         </p>
 
                         <br>
@@ -111,7 +111,7 @@
                         <br>
 
                         <p>
-                            Automated trading system for steam inventory.
+                            Automated trading system for <a href="http://store.steampowered.com/" target="_blank">Steam</a> inventory.
                         </p>
 
                         <p>Tech stack:</p>
