Added projects blocks

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
 
     <!-- SOCIAL LINKS -->
-    <section class="media">
+    <section class="media no-print">
         <div class="container">
             <div class="row">
                 <div class="col-sm-3 photo-block">
@@ -56,7 +56,7 @@
         <div class="container">
 
             <!-- ABOUT ME -->
-            <section class="resume-block personal-data">
+            <section class="resume-block personal-data no-print">
                 <h2 class='block-header'>About me</h2>
 
                 <hr>
@@ -64,14 +64,18 @@
                 <p class='about-me-text'>Javascript expert getting things done.</p>
             </section>
 
-            <!-- EXPERIENCE -->
+            <!-- WORK EXPERIENCE -->
             <section class="resume-block about-me">
                 <h2>Work experience</h2>
                 <hr>
                 <div class="row">
-                    <div class="text-right col-xs-3 about-me-header"><span>apr 2016 - present</span></div>
-                    <div class="bordered col-xs-9 about-me-desc">
-                        <h5>isone.tech</h5>
+                    <div class="text-right col-xs-12 about-me-header"><span>apr 2016 - present</span></div>
+                    <div class="bordered col-xs-12 about-me-desc">
+                        <h5>
+                            <a href="https://www.facebook.com/StartApp.Studio/" target="_blank">startapp.studio
+                                <i class="fa fa-link header-link-icon"></i>
+                            </a>
+                        </h5>
                         <p>Fullstack Javascript Engineer</p>
 
                         <br>
@@ -103,9 +107,13 @@
                 </div>
 
                 <div class="row">
-                    <div class="text-right col-xs-3 about-me-header"><span>jul 2016 - jan 2017</span></div>
-                    <div class="bordered col-xs-9 about-me-desc">
-                        <h5>cs.money</h5>
+                    <div class="text-right col-xs-12 about-me-header"><span>jul 2016 - jan 2017</span></div>
+                    <div class="bordered col-xs-12 about-me-desc">
+                        <h5>
+                            <a href="https://cs.money/" target="_blank">cs.money
+                                <i class="fa fa-link header-link-icon"></i>
+                            </a>
+                        </h5>
                         <p>Fullstack Javascript Developer</p>
 
                         <br>
@@ -120,18 +128,55 @@
                 </div>
 
                 <div class="row">
-                    <div class="text-right col-xs-3 about-me-header"><span>jan 2016 - apr 2016</span></div>
-                    <div class="bordered col-xs-9 about-me-desc">
-                        <h5>happy-giraffe.ru</h5>
+                    <div class="text-right col-xs-12 about-me-header"><span>jan 2016 - apr 2016</span></div>
+                    <div class="bordered col-xs-12 about-me-desc">
+                        <h5>
+                            <a href="http://www.happy-giraffe.ru/" target="_blank">happy-giraffe.ru
+                                <i class="fa fa-link header-link-icon"></i>
+                            </a>
+                        </h5>
                         <p>Front-end developer</p>
                     </div>
                 </div>
 
                 <div class="row">
-                    <div class="text-right col-xs-3 about-me-header"><span>may 2014 - jan 2016</span></div>
-                    <div class="bordered col-xs-9 about-me-desc">
+                    <div class="text-right col-xs-12 about-me-header"><span>may 2014 - jan 2016</span></div>
+                    <div class="bordered col-xs-12 about-me-desc">
                         <h5>Freelance projects</h5>
                         <p>Front-end developer</p>
+                    </div>
+                </div>
+            </section>
+
+            <!-- PROJECTS -->
+            <section class="resume-block about-me">
+                <h2>Some of my Projects</h2>
+                <hr>
+
+                <div class="row">
+                    <div class="bordered col-xs-9 about-me-desc">
+                        <h5>Open source library
+                            <a href="https://www.npmjs.com/package/container-ioc" target="_blank">container-ioc
+                                <i class="fa fa-link header-link-icon"></i>
+                            </a>
+                        </h5>
+                        <p></p>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="bordered col-xs-9 about-me-desc">
+                        <h5>Blockchain and cryptocurrency</h5>
+                        <p>
+                            <a href="https://github.com/thohoh/kozlovcoin" target="_blank">kozlovcoin
+                                <i class="fa fa-github"></i>
+                            </a>
+                        </p>
+                        <p>
+                            <a href="https://github.com/thohoh/kozlovcoin-wallet" target="_blank">kozlovcoin-wallet
+                                <i class="fa fa-github"></i>
+                            </a>
+                        </p>
                     </div>
                 </div>
             </section>
