--- a/index.html
+++ b/index.html
@@ -42,8 +42,7 @@
                 <div class="col-sm-9">
                     <ul class="list-inline media-list">
                         <li><a class='github-ico' href="https://github.com/thohoh" target='_blank'><i class="fa fa-github"></i></a></li>
-                        <li><a class='twitter-ico' href="https://twitter.com/alx_kozlov" target='_blank'><i class="fa fa-twitter"></i></a></li>
-                        <li><a class='email-ico' href="http://www.linkedin.com/in/kozlovtrefak" target='_blank'><i class="fa fa-linkedin"></i></a></li>
+                        <li><a class='email-ico' href="http://www.linkedin.com/in/thohoh" target='_blank'><i class="fa fa-linkedin"></i></a></li>
                     </ul>
                 </div>
             </div>
@@ -166,14 +165,19 @@
 
                 <div class="row">
                     <div class="bordered col-xs-9 about-me-desc">
-                        <h5>Blockchain and cryptocurrency</h5>
+                        <h5>Cryptocurrency
+                            <a href="https://kozlovcoin.thohoh.pro" target="_blank">kozlovcoin
+                                <i class="fa fa-link header-link-icon"></i>
+                            </a>
+                        </h5>
+
                         <p>
-                            <a href="https://github.com/thohoh/kozlovcoin" target="_blank">kozlovcoin
+                            <a href="https://github.com/thohoh/kozlovcoin" target="_blank">wallet source code
                                 <i class="fa fa-github"></i>
                             </a>
                         </p>
                         <p>
-                            <a href="https://github.com/thohoh/kozlovcoin-wallet" target="_blank">kozlovcoin-wallet
+                            <a href="https://github.com/thohoh/kozlovcoin-wallet" target="_blank">blockchain node source code
                                 <i class="fa fa-github"></i>
                             </a>
                         </p>
@@ -195,27 +199,18 @@
                 </div>
 
                 <div class="row">
-                    <div class="text-right col-xs-6"><span>SkypeId:</span></div>
-                    <div class="col-xs-6"><p>itrefa</p></div>
-                </div>
-
-                <div class="row">
                     <div class="text-right col-xs-6"><span>Github:</span></div>
                     <div class="col-xs-6"><a href="https://github.com/thohoh" target='_blank'>https://github.com/thohoh</a></div>
                 </div>
 
                 <div class="row">
                     <div class="text-right col-xs-6"><span>LinkedIn</span></div>
-                    <div class="col-xs-6"><a href="http://www.linkedin.com/in/kozlovtrefak" target='_blank'>https://linkedin.com/in/kozlovtrefak</a></div>
+                    <div class="col-xs-6"><a href="http://www.linkedin.com/in/thohoh" target='_blank'>https://linkedin.com/in/thohoh</a></div>
                 </div>
 
                 <div class="row">
-                    <div class="text-right col-xs-6"><span>Twitter:</span></div>
-                    <div class="col-xs-6"><a href="https://twitter.com/alx_kozlov" target='_blank'>@alx_kozlov</a></div>
-                </div>
-                <div class="row">
-                    <div class="text-right col-xs-6"><span>CV web page:</span></div>
-                    <div class="col-xs-6"><a href="https://thohoh.github.io" target='_blank'>thohoh.github.io</a></div>
+                    <div class="text-right col-xs-6"><span>Website</span></div>
+                    <div class="col-xs-6"><a href="https://thohoh.pro" target='_blank'>thohoh.pro</a></div>
                 </div>
             </section>
     </section> <!-- end resume -->
