--- a/index.html
+++ b/index.html
@@ -80,28 +80,22 @@
                         <br>
 
                         <p>
-                            Web platform for development data-internsive javascript applications.
-                        </p>
-                        <p>
-                            Eliminates the need for a development team, significantly speeds up development.
-                        </p>
-                        <p>
-                            Makes the whole development cycle cheap.
+                            Startup. Web platform for creating fullstack javascript applications. SaaS model.
                         </p>
 
                         <br>
 
                         <p>
-                            Fullstack javascript development. From very PoC to MVP.
+                            Design and development from PoC to MVP.
                         </p>
 
                         <br>
 
-                        <p>Backends stack:</p>
-                        <p> Typescript/Node/Express/MongoDB/PostgreSQL/Golang/RabbitMQ/ElasticSearch.</p>
+                        <p>Backend techs:</p>
+                        <p>Typescript Node Express Docker kubernetes AWS MongoDB PostgreSQL Golang RabbitMQ ElasticSearch.</p>
 
-                        <p>Client stack:</p>
-                        <p>Typescript/Angular2+</p>
+                        <p>Frontend techs:</p>
+                        <p>Typescript Angular5+ Webpack</p>
                     </div>
                 </div>
 
@@ -121,8 +115,8 @@
                             Automated trading system for <a href="http://store.steampowered.com/" target="_blank">Steam</a> inventory.
                         </p>
 
-                        <p>Tech stack:</p>
-                        <p> Node/Express/MySQL</p>
+                        <p>Techs:</p>
+                        <p>Angular Node Express Docker MongoDB MySQL</p>
                     </div>
                 </div>
 
