--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
                 <div class="row">
                     <div class="text-right col-xs-6"><span><span>Email:</span></span>
                     </div>
-                    <div class="col-xs-6"><a href="mailto:itrefak@gmail.com">itrefak@gmail.com</a></div>
+                    <div class="col-xs-6"><a href="mailto:mail@thohoh.pro">mail@thohoh.pro</a></div>
                 </div>
 
                 <div class="row">
