--- a/index.html
+++ b/index.html
@@ -42,7 +42,9 @@
                 <div class="col-sm-9">
                     <ul class="list-inline media-list">
                         <li><a class='github-ico' href="https://github.com/thohoh" target='_blank'><i class="fa fa-github"></i></a></li>
-                        <li><a class='email-ico' href="http://www.linkedin.com/in/thohoh" target='_blank'><i class="fa fa-linkedin"></i></a></li>
+                        <li><a class='facebook-ico' href="https://www.facebook.com/thohotech" target='_blank'><i class="fa fa-facebook"></i></a></li>
+                        <li><a class='twitter-ico' href="https://twitter.com/alx_kozlov" target='_blank'><i class="fa fa-twitter"></i></a></li>
+                        <li><a class='linkedin-ico' href="http://www.linkedin.com/in/thohoh" target='_blank'><i class="fa fa-linkedin"></i></a></li>
                     </ul>
                 </div>
             </div>
@@ -193,19 +195,30 @@
                 </div>
 
                 <div class="row">
+                    <div class="text-right col-xs-6"><span>Website</span></div>
+                    <div class="col-xs-6"><a href="https://thohoh.pro" target='_blank'>thohoh.pro</a></div>
+                </div>
+
+                <div class="row">
                     <div class="text-right col-xs-6"><span>Github:</span></div>
-                    <div class="col-xs-6"><a href="https://github.com/thohoh" target='_blank'>https://github.com/thohoh</a></div>
+                    <div class="col-xs-6"><a href="https://github.com/thohoh" target='_blank'>github.com/thohoh</a></div>
                 </div>
 
                 <div class="row">
                     <div class="text-right col-xs-6"><span>LinkedIn</span></div>
-                    <div class="col-xs-6"><a href="http://www.linkedin.com/in/thohoh" target='_blank'>https://linkedin.com/in/thohoh</a></div>
+                    <div class="col-xs-6"><a href="http://www.linkedin.com/in/thohoh" target='_blank'>linkedin.com/in/thohoh</a></div>
                 </div>
 
                 <div class="row">
-                    <div class="text-right col-xs-6"><span>Website</span></div>
-                    <div class="col-xs-6"><a href="https://thohoh.pro" target='_blank'>thohoh.pro</a></div>
+                    <div class="text-right col-xs-6"><span>Twitter</span></div>
+                    <div class="col-xs-6"><a href="https://twitter.com/alx_kozlov" target='_blank'>twitter.com/alx_kozlov</a></div>
                 </div>
+
+                <div class="row">
+                    <div class="text-right col-xs-6"><span>Facebook</span></div>
+                    <div class="col-xs-6"><a href="https://facebook.com/thohotech" target='_blank'>facebook.com/thohotech</a></div>
+                </div>
+
             </section>
     </section> <!-- end resume -->
 
