--- a/index.html
+++ b/index.html
@@ -157,12 +157,12 @@
                         </h5>
 
                         <p>
-                            <a href="https://github.com/thohoh/kozlovcoin" target="_blank">wallet source code
+                            <a href="https://github.com/thohoh/kozlovcoin" target="_blank">blockchain node source code
                                 <i class="fa fa-github"></i>
                             </a>
                         </p>
                         <p>
-                            <a href="https://github.com/thohoh/kozlovcoin-wallet" target="_blank">blockchain node source code
+                            <a href="https://github.com/thohoh/kozlovcoin-wallet" target="_blank">wallet source code
                                 <i class="fa fa-github"></i>
                             </a>
                         </p>
